Revert "Revert "tweaks to get it running (#1)" (#2)" (#3)
This reverts commit cf6eecd85fa0ff2dd342d085a394f19c6ca0471b.